--- a/app/src/main/res/layout/fragment_broca_index.xml
+++ b/app/src/main/res/layout/fragment_broca_index.xml
@@ -23,12 +23,12 @@
         android:layout_height="40dp"
         android:layout_marginTop="72dp"
         android:ems="10"
+        android:hint="Input your height (cm)"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:text="Input your height (cm)" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView6"
